--- a/app/src/main/res/layout/activity_informasi.xml
+++ b/app/src/main/res/layout/activity_informasi.xml
@@ -41,7 +41,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:text="Data Profil"
+                        android:text="Data Informasi"
                         android:textColor="#3B3486"
                         android:textSize="19sp"
                         android:textStyle="bold" />
